--- a/press.html
+++ b/press.html
@@ -53,94 +53,94 @@
         <section id="hero-press" class="parallax">
         </section>
         <main>
-            <div class="card-grid">
+            <div class="card-grid-2">
                 <div class="first-4">
-                <div class="card-container">
-                    <div class="card">
-                        <img src="pics/no-photo.jpg" alt="photo">
+                <div class="card-container-2">
+                    <div class="card-2">
+                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                     </div>
                 </div>
-                <div class="card-container">
-                    <div class="card">
-                        <img src="pics/no-photo.jpg" alt="photo">
+                <div class="card-container-2">
+                    <div class="card-2">
+                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                     </div>
                 </div>
-                <div class="card-container">
-                    <div class="card">
-                        <img src="pics/no-photo.jpg" alt="photo">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-                    </div>
-                </div>
-                </div>
-                <div class="first-4">
-                <div class="card-container">
-                    <div class="card">
-                        <img src="pics/no-photo.jpg" alt="photo">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-                    </div>
-                </div>
-                <div class="card-container">
-                    <div class="card">
-                        <img src="pics/no-photo.jpg" alt="photo">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-                    </div>
-                </div>
-                <div class="card-container">
-                    <div class="card">
-                        <img src="pics/no-photo.jpg" alt="photo">
+                <div class="card-container-2">
+                    <div class="card-2">
+                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                     </div>
                 </div>
                 </div>
                 <div class="first-4">
-                <div class="card-container">
-                    <div class="card">
-                        <img src="pics/no-photo.jpg" alt="photo">
+                <div class="card-container-2">
+                    <div class="card-2">
+                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                     </div>
                 </div>
-                <div class="card-container">
-                    <div class="card">
-                        <img src="pics/no-photo.jpg" alt="photo">
+                <div class="card-container-2">
+                    <div class="card-2">
+                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                     </div>
                 </div>
-                <div class="card-container">
-                    <div class="card">
-                        <img src="pics/no-photo.jpg" alt="photo">
+                <div class="card-container-2">
+                    <div class="card-2">
+                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                    </div>
+                </div>
+                </div>
+                <div class="first-4">
+                <div class="card-container-2">
+                    <div class="card-2">
+                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                    </div>
+                </div>
+                <div class="card-container-2">
+                    <div class="card-2">
+                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                    </div>
+                </div>
+                <div class="card-container-2">
+                    <div class="card-2">
+                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                     </div>
                     </div>
                 </div>
                 <div class="first-4">
-                <div class="card-container">
-                    <div class="card">
-                        <img src="pics/no-photo.jpg" alt="photo">
+                <div class="card-container-2">
+                    <div class="card-2">
+                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                     </div>
                 </div>
-                <div class="card-container">
-                    <div class="card">
-                        <img src="pics/no-photo.jpg" alt="photo">
+                <div class="card-container-2">
+                    <div class="card-2">
+                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                     </div>
                 </div>
-                <div class="card-container">
-                    <div class="card">
-                        <img src="pics/no-photo.jpg" alt="photo">
+                <div class="card-container-2">
+                    <div class="card-2">
+                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                     </div>
