--- a/our-story.html
+++ b/our-story.html
@@ -53,18 +53,20 @@
         <section id="hero-our-story" class="parallax">
         </section>
         <main>
-            <div class="intro-richard">
-                <p>Richard Patterson</p>
-                <br>
-                <p>Richard Patterson (Rich), CEO & CTO of Trion Supercars, realized a lifelong dream in May 2012 after 40 years in the automotive industry by founding Trion with a core team of experts.</p>
-                <br>
-                <p>Rich’s passion for cars started in his Detroit childhood, and at 15, he earned a GM apprenticeship after winning a statewide drafting contest. A graduate of Mumford High School and Hall of Fame inductee, Rich began his career as a CAD designer at Modern Engineering, quickly rising to leadership roles due to his expertise in automotive interior systems.</p>
-                <br>  ​
-                <p>With over two decades of experience, including contributions to Chrysler's Stow 'n Go seating system, Rich moved to the West Coast to immerse himself in design innovation. Today, he brings his vision to life with Trion Supercars, offering high-performance American-made supercars that combine style, speeds of 300 mph, and comfort, with options ranging from traditional engines to hybrid and fully electric models.</p>
-                </div>
+            <div class="layout-rich">
                 <div class="rich-img">
             <img src="pics/icons/account-icon.jpg" alt="Richard Patterson">
                 </div>
+                <div class="intro-richard">
+                    <p>Richard Patterson</p>
+                    <br>
+                    <p>Richard Patterson (Rich), CEO & CTO of Trion Supercars, realized a lifelong dream in May 2012 after 40 years in the automotive industry by founding Trion with a core team of experts.</p>
+                    <br>
+                    <p>Rich’s passion for cars started in his Detroit childhood, and at 15, he earned a GM apprenticeship after winning a statewide drafting contest. A graduate of Mumford High School and Hall of Fame inductee, Rich began his career as a CAD designer at Modern Engineering, quickly rising to leadership roles due to his expertise in automotive interior systems.</p>
+                    <br>  ​
+                    <p>With over two decades of experience, including contributions to Chrysler's Stow 'n Go seating system, Rich moved to the West Coast to immerse himself in design innovation. Today, he brings his vision to life with Trion Supercars, offering high-performance American-made supercars that combine style, speeds of 300 mph, and comfort, with options ranging from traditional engines to hybrid and fully electric models.</p>
+                    </div>
+            </div>
             <div class="card-grid">
                 <div class="first-4">
                 <div class="card-container">
