--- a/contact-us.html
+++ b/contact-us.html
@@ -51,9 +51,9 @@
             </nav>
         </header>
         <main>
-            <div id="contact-us-main" class="row wrap">
+            <div class="h2-contact"><h2>CONTACT US</h2></div>
+            <div class="contact-us-main">
                 <section id="footer-contact">
-                    <div class="h2-contact"><h2>CONTACT US</h2></div>
                     <form class="row wrap">
                         <div>
                             <label for="f-name">FIRST NAME</label>
@@ -78,7 +78,7 @@
                         <button type="submit" class="button">SUBMIT</button>                  
                     </form>
                 </section>
-            </div>
+        
             <div class="contact-info">
             <p>For questions, technical assistance, or collaboration opportunities via the contact information provided.</p>
             <br>
@@ -87,6 +87,7 @@
             <p>123 Anywhere St., Any City, ST 12345</p>
             <br>
             <p>hello@reallygreatsite.com</p>
+        </div>
         </div>
         </main>
         <footer>
