--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="app.css">
         <title>Home | TRION</title>
-        <link rel="icon" type="image/x-icon" href="pics/trion-logo.png">
+        <link rel="icon" type="image/x-icon" href="pics/icons/trion-logo.png">
     </head>
     <body id="home">
         <header>
@@ -68,13 +68,13 @@
             </div>
         </section>
         <main>
-            <section class="full img col">
+            <section class="full img col  shadow-top-bottom">
                 <div class="text-wrapper shaded">
-                    <h3 class="shaded">OUR VISION & FUTURE</h3>
+                    <h3><span>OUR VISION </span><span>& FUTURE</span></h3>
                     <p>Trion Supercars envisions a future where cutting-edge electric technology meets unrivaled performance, pushing the boundaries of speed, sustainability, and innovation. Their mission is to revolutionize the automotive industry by creating all-electric supercars that offer world-class performance while maintaining a commitment to environmental responsibility.</p>
                 </div>
             </section>
-            <section class="slanted img img-left">
+            <section class="slanted img">
                 <img src="pics/people/team-1.avif" alt="Trion Team">
                 <div class="text-wrapper col">
                     <h3><span>OUR TEAM, </span><span>YOUR FUTURE</span></h3>
@@ -83,15 +83,20 @@
                     <a href="#" class="button">LEARN MORE</a>
                 </div>
             </section>
-            <section class="full img col">
+            <section class="full img col shadow-top-bottom">
                 <div class="text-wrapper shaded">
-                    <h3 class="shaded">TOP PERFORMANCE</h3>
+                    <h3 class="shaded"><span>TOP </span><span>PERFORMANCE</span></h3>
                     <p>Trion Supercars designs its vehicles with a focus on aligning each model with user preferences and real-world needs. From the initial concept to the final testing stages, the company integrates insights that shape design choices, technological features, and performance capabilities.</p>
                 </div>
             </section>
-            <section>
-                <h3></h3>
-                <p></p>
+            <section class="slanted img img-right">
+                <img src="pics/cars/in-progress-1.jpg" alt="Trion Team">
+                <div class="text-wrapper col">
+                    <h3><span>CUSTOMER </span><span>CENTERED </span><span>DESIGN</span></h3>
+                    <p>Innovating Electric Transportation
+                        Collaborating with our team and technical schools to bring this vision to life.</p>
+                    <a href="#" class="button">LEARN MORE</a>
+                </div>
             </section>
         </main>
         <footer>
