--- a/customize.html
+++ b/customize.html
@@ -11,7 +11,18 @@
     
         </header>
         <main>
-            <div class="x-icon">
+            <section class="container">
+                <input type="radio" name="color" id="color-1" checked hidden>
+                <input type="radio" name="color" id="color-2" hidden>
+                <input type="radio" name="color" id="color-3" hidden>
+                <input type="radio" name="color" id="color-4" hidden>
+                <input type="radio" name="color" id="color-5" hidden>
+                <input type="radio" name="color" id="color-6" hidden>
+                <input type="radio" name="color" id="color-7" hidden>
+                <input type="radio" name="color" id="color-8" hidden>
+                <input type="radio" name="color" id="color-9" hidden>
+                <input type="radio" name="color" id="color-10" hidden>
+                <div class="x-icon">
             <a class="x-icon" href="index.html" title="x"></a>
             </div>
             <div class="customize-p">
@@ -22,9 +33,22 @@
             <div class="customize-h2">
             <h2>TRION</h2> 
             </div>
-            <div class="customize-car-img">
-            <img src="pics/cars/7_25-Lux-Black-Nemesis_side-1024x575.png" width="1024px" height="automotive">
+            <div class="product">
+            <img src="pics/cars/7_25-Lux-Black-Nemesis_side-2.png" width="1024px" height="automotive">
             </div>
+            <div class="product-nav">
+                <label for="color-1"></label>
+                <label for="color-2"></label>
+                <label for="color-3"></label>
+                <label for="color-4"></label>
+                <label for="color-5"></label>
+                <label for="color-6"></label>
+                <label for="color-7"></label>
+                <label for="color-8"></label>
+                <label for="color-9"></label>
+                <label for="color-10"></label>
+            </div>
+            </section>
         </main>
         <footer>
         </footer>
