ported header + footer to all pages

--- a/contact-us.html
+++ b/contact-us.html
@@ -3,14 +3,15 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="app.css">
-        <title>Document</title>
+        <title>Contact Us | TRION</title>
+        <link rel="icon" type="image/x-icon" href="pics/icons/trion-logo.png">
     </head>
     <body>
         <header>
             <nav class="row">
-                <a class="navlogo img" href="index.html" aria-label="company logo"></a>
+                <a class="navlogo img" href="index.html" aria-label="company logo"><h1>TRION</h1></a>
                 <label for="burger-cb" id="menu-burger" class="img"></label>
-                <input type="checkbox" id="burger-cb" tabindex="1">
+                <input type="checkbox" id="burger-cb" tabindex="0">
                 
                 <ul class="row" id="nav-list">
                     <li>
@@ -92,5 +93,6 @@
         </main>
         <footer>
         </footer>
+        <script src="script.js"></script>
     </body>
 </html>
