--- a/nemesis.html
+++ b/nemesis.html
@@ -3,49 +3,50 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="app.css">
-        <title>Document</title>
+        <title>Nemesis | TRION</title>
+        <link rel="icon" type="image/x-icon" href="pics/icons/trion-logo.png">
     </head>
     <body>
         <header>
             <nav class="row">
-                <a class="navlogo img" href="index.html" aria-label="company logo"></a>
+                <a class="navlogo img" href="index.html" aria-label="company logo"><h1>TRION</h1></a>
                 <label for="burger-cb" id="menu-burger" class="img"></label>
-                <input type="checkbox" id="burger-cb" tabindex="1">
+                <input type="checkbox" id="burger-cb" tabindex="0">
                 
                 <ul class="row" id="nav-list">
                     <li>
                         <button aria-haspopup="true" class="no-button">MODELS</button>
                         <ul class="dropdown" aria-label="submenu">
-                            <li><a href="#">NEMESIS</a></li>
-                            <li><a href="#">BLACK WIDOW</a></li>
+                            <li><a href="nemesis.html">NEMESIS</a></li>
+                            <li><a href="black-widow.html">BLACK WIDOW</a></li>
                         </ul>
                     </li>
                     <li>
                         <button aria-haspopup="true" class="no-button">ABOUT US</button>
                         <ul class="dropdown" aria-label="submenu">
-                            <li><a href="#">OUR STORY</a></li>
-                            <li><a href="#">PRESS</a></li>
-                            <li><a href="#">CONTACT US</a></li>
+                            <li><a href="our-story.html">OUR STORY</a></li>
+                            <li><a href="press.html">PRESS</a></li>
+                            <li><a href="contact-us.html">CONTACT US</a></li>
                         </ul>
                     </li>
                     <li>
                         <button aria-haspopup="true" class="no-button">CUSTOMIZE</button>
                         <ul class="dropdown" aria-label="submenu">
-                            <li><a href="#">NEMESIS</a></li>
-                            <li><a href="#">BLACK WIDOW</a></li>
+                            <li><a href="customize.html">NEMESIS</a></li>
+                            <li><a href="customize.html">BLACK WIDOW</a></li>
                         </ul> 
                     </li>
-                    <li><a href="#"aria-haspopup="true">SHOP</a></li>
+                    <li><a href="shop.html"aria-haspopup="true">SHOP</a></li>
                 </ul>
                 <div class="row">
-                    <a class="navcart img" href="#" title="cart"></a>
+                    <a class="navcart img" href="cart.html" title="cart"></a>
                     <div class="cart-overlay hidden">
                         
                     </div>
-                    <a class="navaccount img" href="#" title="account"></a>
+                    <a class="navaccount img" href="account.html" title="account"></a>
                     <div class="login-overlay col hidden">
-                        <a href="" class="button">REGISTER</a>
-                        <a href="" class="button">LOGIN</a>
+                        <a href="login.html" class="button">REGISTER</a>
+                        <a href="login.html" class="button">LOGIN</a>
                     </div>
                 </div>
             </nav>
@@ -60,17 +61,17 @@
             <div id="footer-main" class="row wrap">
                 <nav class="footer-nav">
                     <ul class="col">
-                        <li><a href="#">ACCOUNT</a></li>
+                        <li><a href="account.html">ACCOUNT</a></li>
                         <li><a href="#">MODELS</a></li>
-                        <li><a href="#">CUSTOMIZATION</a></li>
+                        <li><a href="customize.html">CUSTOMIZATION</a></li>
                         <li><a href="#">ABOUT US</a></li>
-                        <li><a href="#">PRESS</a></li>
-                        <li><a href="#">CONTACT US</a></li>
-                        <li><a href="#">STORE</a></li>
+                        <li><a href="press.html">PRESS</a></li>
+                        <li><a href="contact-us.html">CONTACT US</a></li>
+                        <li><a href="shop.html">STORE</a></li>
                     </ul>
                 </nav>
                 <section id="footer-contact">
-                    <h2>CONTACT US</h2>
+                    <h3>CONTACT US</h3>
                     <form class="row wrap">
                         <div>
                             <label for="f-name">FIRST NAME</label>
@@ -97,13 +98,13 @@
                 </section>
             </div>
             <ul class="row connections">
-                <li><a href=""><img src="pics/facebook-icon.svg" alt=""></a></li>
-                <li><a href=""><img src="pics/instagram-icon.svg" alt=""></a></li>
-                <li><a href=""><img src="pics/linkedin-icon.svg" alt=""></a></li>
-                <li><a href=""><img src="pics/youtube-icon.svg" alt=""></a></li>
-                <li><a href=""><img src="pics/tiktok-icon.svg" alt=""></a></li>
-                <li><a href=""><img src="pics/x-icon.svg" alt=""></a></li>
-                <li><a href=""><img src="pics/twitch-icon.svg" alt=""></a></li>
+                <li><a href=""><img src="pics/icons/facebook-icon.svg" alt="facebook"></a></li>
+                <li><a href=""><img src="pics/icons/instagram-icon.svg" alt="instagram"></a></li>
+                <li><a href=""><img src="pics/icons/linkedin-icon.svg" alt="linkedin"></a></li>
+                <li><a href=""><img src="pics/icons/youtube-icon.svg" alt="youtube"></a></li>
+                <li><a href=""><img src="pics/icons/tiktok-icon.svg" alt="tiktok"></a></li>
+                <li><a href=""><img src="pics/icons/x-icon.svg" alt="x"></a></li>
+                <li><a href=""><img src="pics/icons/twitch-icon.svg" alt="twitch"></a></li>
             </ul>
             <hr>
                 <div class="col" id="footer-foot">
@@ -114,5 +115,6 @@
                     <p>© 2024-2025, Trion Supercars</p>
                 </div>
         </footer>
+        <script src="script.js"></script>
     </body>
 </html>
