--- a/our-story.html
+++ b/our-story.html
@@ -3,14 +3,15 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="app.css">
-        <title>Document</title>
+        <title>Our Story | TRION</title>
+        <link rel="icon" type="image/x-icon" href="pics/icons/trion-logo.png">
     </head>
     <body>
         <header>
             <nav class="row">
-                <a class="navlogo img" href="index.html" aria-label="company logo"></a>
+                <a class="navlogo img" href="index.html" aria-label="company logo"><h1>TRION</h1></a>
                 <label for="burger-cb" id="menu-burger" class="img"></label>
-                <input type="checkbox" id="burger-cb" tabindex="1">
+                <input type="checkbox" id="burger-cb" tabindex="0">
                 
                 <ul class="row" id="nav-list">
                     <li>
@@ -155,7 +156,7 @@
                     </ul>
                 </nav>
                 <section id="footer-contact">
-                    <h2>CONTACT US</h2>
+                    <h3>CONTACT US</h3>
                     <form class="row wrap">
                         <div>
                             <label for="f-name">FIRST NAME</label>
@@ -182,13 +183,13 @@
                 </section>
             </div>
             <ul class="row connections">
-                <li><a href=""><img src="pics/facebook-icon.svg" alt=""></a></li>
-                <li><a href=""><img src="pics/instagram-icon.svg" alt=""></a></li>
-                <li><a href=""><img src="pics/linkedin-icon.svg" alt=""></a></li>
-                <li><a href=""><img src="pics/youtube-icon.svg" alt=""></a></li>
-                <li><a href=""><img src="pics/tiktok-icon.svg" alt=""></a></li>
-                <li><a href=""><img src="pics/x-icon.svg" alt=""></a></li>
-                <li><a href=""><img src="pics/twitch-icon.svg" alt=""></a></li>
+                <li><a href=""><img src="pics/icons/facebook-icon.svg" alt="facebook"></a></li>
+                <li><a href=""><img src="pics/icons/instagram-icon.svg" alt="instagram"></a></li>
+                <li><a href=""><img src="pics/icons/linkedin-icon.svg" alt="linkedin"></a></li>
+                <li><a href=""><img src="pics/icons/youtube-icon.svg" alt="youtube"></a></li>
+                <li><a href=""><img src="pics/icons/tiktok-icon.svg" alt="tiktok"></a></li>
+                <li><a href=""><img src="pics/icons/x-icon.svg" alt="x"></a></li>
+                <li><a href=""><img src="pics/icons/twitch-icon.svg" alt="twitch"></a></li>
             </ul>
             <hr>
                 <div class="col" id="footer-foot">
@@ -199,5 +200,6 @@
                     <p>© 2024-2025, Trion Supercars</p>
                 </div>
         </footer>
+        <script src="script.js"></script>
     </body>
 </html>
