--- a/shop.html
+++ b/shop.html
@@ -3,46 +3,50 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="app.css">
-        <title>Document</title>
+        <title>Shop | TRION</title>
+        <link rel="icon" type="image/x-icon" href="pics/icons/trion-logo.png">
     </head>
     <body>
         <header>
             <nav class="row">
-                <a class="navlogo img" href="index.html" aria-label="company logo"></a>
-                <ul class="row">
+                <a class="navlogo img" href="index.html" aria-label="company logo"><h1>TRION</h1></a>
+                <label for="burger-cb" id="menu-burger" class="img"></label>
+                <input type="checkbox" id="burger-cb" tabindex="0">
+                
+                <ul class="row" id="nav-list">
                     <li>
                         <button aria-haspopup="true" class="no-button">MODELS</button>
                         <ul class="dropdown" aria-label="submenu">
-                            <li><a href="#">NEMESIS</a></li>
-                            <li><a href="#">BLACK WIDOW</a></li>
+                            <li><a href="nemesis.html">NEMESIS</a></li>
+                            <li><a href="black-widow.html">BLACK WIDOW</a></li>
                         </ul>
                     </li>
                     <li>
                         <button aria-haspopup="true" class="no-button">ABOUT US</button>
                         <ul class="dropdown" aria-label="submenu">
-                            <li><a href="#">OUR STORY</a></li>
-                            <li><a href="#">PRESS</a></li>
-                            <li><a href="#">CONTACT US</a></li>
+                            <li><a href="our-story.html">OUR STORY</a></li>
+                            <li><a href="press.html">PRESS</a></li>
+                            <li><a href="contact-us.html">CONTACT US</a></li>
                         </ul>
                     </li>
                     <li>
                         <button aria-haspopup="true" class="no-button">CUSTOMIZE</button>
                         <ul class="dropdown" aria-label="submenu">
-                            <li><a href="#">NEMESIS</a></li>
-                            <li><a href="#">BLACK WIDOW</a></li>
+                            <li><a href="customize.html">NEMESIS</a></li>
+                            <li><a href="customize.html">BLACK WIDOW</a></li>
                         </ul> 
                     </li>
-                    <li><a href="#"aria-haspopup="true">SHOP</a></li>
+                    <li><a href="shop.html"aria-haspopup="true">SHOP</a></li>
                 </ul>
                 <div class="row">
-                    <a class="navcart img" href="#" title="cart"></a>
+                    <a class="navcart img" href="cart.html" title="cart"></a>
                     <div class="cart-overlay hidden">
                         
                     </div>
-                    <a class="navaccount img" href="#" title="account"></a>
+                    <a class="navaccount img" href="account.html" title="account"></a>
                     <div class="login-overlay col hidden">
-                        <a href="" class="button">REGISTER</a>
-                        <a href="" class="button">LOGIN</a>
+                        <a href="login.html" class="button">REGISTER</a>
+                        <a href="login.html" class="button">LOGIN</a>
                     </div>
                 </div>
             </nav>
