--- a/our-story.html
+++ b/our-story.html
@@ -71,7 +71,7 @@
                 <div class="first-4">
                 <div class="card-container">
                     <div class="card">
-                        <img src="pics/icons/no-photo.jpg" alt="photo">
+                        <img src="pics/people/Brent.webp" alt="photo">
                         <p>Chief Operating Officer</p>
                         <br>
                         <p>Brent Johnson</p>
@@ -79,7 +79,7 @@
                 </div>
                 <div class="card-container">
                     <div class="card">
-                        <img src="pics/icons/no-photo.jpg" alt="photo">
+                        <img src="pics/people/Nancy.webp" alt="photo">
                         <p>CEA - Chief Executive Assistant</p>
                         <br>
                         <p>Nancy Patterson</p>
@@ -87,7 +87,7 @@
                 </div>
                 <div class="card-container">
                     <div class="card">
-                        <img src="pics/icons/no-photo.jpg" alt="photo">
+                        <img src="pics/people/Quinton.webp" alt="photo">
                         <p>VP of Special Vehicle Operations</p>
                         <br>
                         <p>Quinton Dodson</p>
@@ -95,7 +95,7 @@
                 </div>
                 <div class="card-container">
                     <div class="card">
-                        <img src="pics/icons/no-photo.jpg" alt="photo">
+                        <img src="pics/people/Kie.avif" alt="photo">
                         <p>VP of Sales / Dealer Coordination</p>
                         <br>
                         <p>Kie Fair</p>
@@ -105,7 +105,7 @@
                 <div class="first-4">
                 <div class="card-container">
                     <div class="card">
-                        <img src="pics/icons/no-photo.jpg" alt="photo">
+                        <img src="pics/people/Romeo.webp" alt="photo">
                         <p>Chief Brand Ambassador</p>
                         <br>
                         <p>Romeo Miller</p>
@@ -113,7 +113,7 @@
                 </div>
                 <div class="card-container">
                     <div class="card">
-                        <img src="pics/icons/no-photo.jpg" alt="photo">
+                        <img src="pics/people/Warren.avif" alt="photo">
                         <p>Director of Special Programs</p>
                         <br>
                         <p>Warren Hollier</p>
@@ -121,7 +121,7 @@
                 </div>
                 <div class="card-container">
                     <div class="card">
-                        <img src="pics/icons/no-photo.jpg" alt="photo">
+                        <img src="pics/people/Peter.avif" alt="photo">
                         <p>CCO, Compliance Officer</p>
                         <br>
                         <p>Peter Dwars</p>
@@ -129,7 +129,7 @@
                 </div>
                 <div class="card-container">
                     <div class="card">
-                        <img src="pics/icons/no-photo.jpg" alt="photo">
+                        <img src="pics/people/DeMarcus.webp" alt="photo">
                         <p>VP of Business Development</p>
                         <br>
                         <p>DeMarcus Nelson</p>
@@ -182,13 +182,13 @@
                 </section>
             </div>
             <ul class="row connections">
-                <li><a href=""><img src="pics/facebook-icon.svg" alt=""></a></li>
-                <li><a href=""><img src="pics/instagram-icon.svg" alt=""></a></li>
-                <li><a href=""><img src="pics/linkedin-icon.svg" alt=""></a></li>
-                <li><a href=""><img src="pics/youtube-icon.svg" alt=""></a></li>
-                <li><a href=""><img src="pics/tiktok-icon.svg" alt=""></a></li>
-                <li><a href=""><img src="pics/x-icon.svg" alt=""></a></li>
-                <li><a href=""><img src="pics/twitch-icon.svg" alt=""></a></li>
+                <li><a href=""><img src="pics/icons/facebook-icon.svg" alt="facebook"></a></li>
+                <li><a href=""><img src="pics/icons/instagram-icon.svg" alt="instagram"></a></li>
+                <li><a href=""><img src="pics/icons/linkedin-icon.svg" alt="linkedin"></a></li>
+                <li><a href=""><img src="pics/icons/youtube-icon.svg" alt="youtube"></a></li>
+                <li><a href=""><img src="pics/icons/tiktok-icon.svg" alt="tiktok"></a></li>
+                <li><a href=""><img src="pics/icons/x-icon.svg" alt="x"></a></li>
+                <li><a href=""><img src="pics/icons/twitch-icon.svg" alt="twitch"></a></li>
             </ul>
             <hr>
                 <div class="col" id="footer-foot">
@@ -199,5 +199,6 @@
                     <p>© 2024-2025, Trion Supercars</p>
                 </div>
         </footer>
+        <script src="script.js"></script>
     </body>
 </html>
