--- a/nemesis.html
+++ b/nemesis.html
@@ -3,55 +3,101 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="app.css">
-        <title>Document</title>
+        <title>Home | TRION</title>
+        <link rel="icon" type="image/x-icon" href="pics/icons/trion-logo.png">
     </head>
-    <body>
+    <body id="home">
         <header>
             <nav class="row">
-                <a class="navlogo img" href="index.html" aria-label="company logo"></a>
+                <a class="navlogo img" href="index.html" aria-label="company logo"><h1>TRION</h1></a>
                 <label for="burger-cb" id="menu-burger" class="img"></label>
-                <input type="checkbox" id="burger-cb" tabindex="1">
+                <input type="checkbox" id="burger-cb" tabindex="0">
                 
                 <ul class="row" id="nav-list">
                     <li>
                         <button aria-haspopup="true" class="no-button">MODELS</button>
                         <ul class="dropdown" aria-label="submenu">
-                            <li><a href="#">NEMESIS</a></li>
-                            <li><a href="#">BLACK WIDOW</a></li>
+                            <li><a href="nemesis.html">NEMESIS</a></li>
+                            <li><a href="black-widow.html">BLACK WIDOW</a></li>
                         </ul>
                     </li>
                     <li>
                         <button aria-haspopup="true" class="no-button">ABOUT US</button>
                         <ul class="dropdown" aria-label="submenu">
-                            <li><a href="#">OUR STORY</a></li>
-                            <li><a href="#">PRESS</a></li>
-                            <li><a href="#">CONTACT US</a></li>
+                            <li><a href="our-story.html">OUR STORY</a></li>
+                            <li><a href="press.html">PRESS</a></li>
+                            <li><a href="contact-us.html">CONTACT US</a></li>
                         </ul>
                     </li>
                     <li>
                         <button aria-haspopup="true" class="no-button">CUSTOMIZE</button>
                         <ul class="dropdown" aria-label="submenu">
-                            <li><a href="#">NEMESIS</a></li>
-                            <li><a href="#">BLACK WIDOW</a></li>
+                            <li><a href="customize.html">NEMESIS</a></li>
+                            <li><a href="customize.html">BLACK WIDOW</a></li>
                         </ul> 
                     </li>
-                    <li><a href="#"aria-haspopup="true">SHOP</a></li>
+                    <li><a href="shop.html"aria-haspopup="true">SHOP</a></li>
                 </ul>
                 <div class="row">
-                    <a class="navcart img" href="#" title="cart"></a>
+                    <a class="navcart img" href="cart.html" title="cart"></a>
                     <div class="cart-overlay hidden">
                         
                     </div>
-                    <a class="navaccount img" href="#" title="account"></a>
+                    <a class="navaccount img" href="account.html" title="account"></a>
                     <div class="login-overlay col hidden">
-                        <a href="" class="button">REGISTER</a>
-                        <a href="" class="button">LOGIN</a>
+                        <a href="login.html" class="button">REGISTER</a>
+                        <a href="login.html" class="button">LOGIN</a>
                     </div>
                 </div>
             </nav>
         </header>
+        <section role="hero" class="row carousel-container">
+            <div class="hero parallax carousel_2">
+                <article class="col justify-end align-center">
+                    <h2 class="shaded">NEMESIS</h2>
+                    <p>LUXURY. SPEED. SUSTAINABILITY.</p>
+                    <a href="#" class="button">MORE DETAILS</a>
+                </article>
+            </div>
+            <div class="hero parallax carousel_2">
+                <article class="col justify-end align-center">
+                    <h2 class="shaded">BLACK WIDOW</h2>
+                    <p>LUXURY. SPEED. SUSTAINABILITY.</p>
+                    <a href="#" class="button">MORE DETAILS</a>
+                </article>
+            </div>
+        </section>
         <main>
-
+            <section class="full img col  shadow-top-bottom">
+                <div class="text-wrapper shaded">
+                    <h3><span>OUR VISION </span><span>& FUTURE</span></h3>
+                    <p>Trion Supercars envisions a future where cutting-edge electric technology meets unrivaled performance, pushing the boundaries of speed, sustainability, and innovation. Their mission is to revolutionize the automotive industry by creating all-electric supercars that offer world-class performance while maintaining a commitment to environmental responsibility.</p>
+                </div>
+            </section>
+            <section class="slanted img">
+                <img src="pics/people/team-1.avif" alt="Trion Team">
+                <div class="text-wrapper col">
+                    <h3><span>OUR TEAM, </span><span>YOUR FUTURE</span></h3>
+                    <p>Innovating Electric Transportation
+                        Collaborating with our team and technical schools to bring this vision to life.</p>
+                    <a href="#" class="button">LEARN MORE</a>
+                </div>
+            </section>
+            <section class="full img col shadow-top-bottom">
+                <div class="text-wrapper shaded">
+                    <h3 class="shaded"><span>TOP </span><span>PERFORMANCE</span></h3>
+                    <p>Trion Supercars designs its vehicles with a focus on aligning each model with user preferences and real-world needs. From the initial concept to the final testing stages, the company integrates insights that shape design choices, technological features, and performance capabilities.</p>
+                </div>
+            </section>
+            <section class="slanted img img-right">
+                <img src="pics/cars/in-progress-1.jpg" alt="Trion Team">
+                <div class="text-wrapper col">
+                    <h3><span>CUSTOMER </span><span>CENTERED </span><span>DESIGN</span></h3>
+                    <p>Innovating Electric Transportation
+                        Collaborating with our team and technical schools to bring this vision to life.</p>
+                    <a href="#" class="button">LEARN MORE</a>
+                </div>
+            </section>
         </main>
         <footer>
             <div>
@@ -60,17 +106,17 @@
             <div id="footer-main" class="row wrap">
                 <nav class="footer-nav">
                     <ul class="col">
-                        <li><a href="#">ACCOUNT</a></li>
+                        <li><a href="account.html">ACCOUNT</a></li>
                         <li><a href="#">MODELS</a></li>
-                        <li><a href="#">CUSTOMIZATION</a></li>
+                        <li><a href="customize.html">CUSTOMIZATION</a></li>
                         <li><a href="#">ABOUT US</a></li>
-                        <li><a href="#">PRESS</a></li>
-                        <li><a href="#">CONTACT US</a></li>
-                        <li><a href="#">STORE</a></li>
+                        <li><a href="press.html">PRESS</a></li>
+                        <li><a href="contact-us.html">CONTACT US</a></li>
+                        <li><a href="shop.html">STORE</a></li>
                     </ul>
                 </nav>
                 <section id="footer-contact">
-                    <h2>CONTACT US</h2>
+                    <h3>CONTACT US</h3>
                     <form class="row wrap">
                         <div>
                             <label for="f-name">FIRST NAME</label>
@@ -97,13 +143,13 @@
                 </section>
             </div>
             <ul class="row connections">
-                <li><a href=""><img src="pics/facebook-icon.svg" alt=""></a></li>
-                <li><a href=""><img src="pics/instagram-icon.svg" alt=""></a></li>
-                <li><a href=""><img src="pics/linkedin-icon.svg" alt=""></a></li>
-                <li><a href=""><img src="pics/youtube-icon.svg" alt=""></a></li>
-                <li><a href=""><img src="pics/tiktok-icon.svg" alt=""></a></li>
-                <li><a href=""><img src="pics/x-icon.svg" alt=""></a></li>
-                <li><a href=""><img src="pics/twitch-icon.svg" alt=""></a></li>
+                <li><a href=""><img src="pics/icons/facebook-icon.svg" alt="facebook"></a></li>
+                <li><a href=""><img src="pics/icons/instagram-icon.svg" alt="instagram"></a></li>
+                <li><a href=""><img src="pics/icons/linkedin-icon.svg" alt="linkedin"></a></li>
+                <li><a href=""><img src="pics/icons/youtube-icon.svg" alt="youtube"></a></li>
+                <li><a href=""><img src="pics/icons/tiktok-icon.svg" alt="tiktok"></a></li>
+                <li><a href=""><img src="pics/icons/x-icon.svg" alt="x"></a></li>
+                <li><a href=""><img src="pics/icons/twitch-icon.svg" alt="twitch"></a></li>
             </ul>
             <hr>
                 <div class="col" id="footer-foot">
@@ -114,5 +160,6 @@
                     <p>© 2024-2025, Trion Supercars</p>
                 </div>
         </footer>
+        <script src="script.js"></script>
     </body>
 </html>
