--- a/press.html
+++ b/press.html
@@ -192,13 +192,13 @@
                 </section>
             </div>
             <ul class="row connections">
-                <li><a href=""><img src="pics/facebook-icon.svg" alt=""></a></li>
-                <li><a href=""><img src="pics/instagram-icon.svg" alt=""></a></li>
-                <li><a href=""><img src="pics/linkedin-icon.svg" alt=""></a></li>
-                <li><a href=""><img src="pics/youtube-icon.svg" alt=""></a></li>
-                <li><a href=""><img src="pics/tiktok-icon.svg" alt=""></a></li>
-                <li><a href=""><img src="pics/x-icon.svg" alt=""></a></li>
-                <li><a href=""><img src="pics/twitch-icon.svg" alt=""></a></li>
+                <li><a href=""><img src="pics/icons/facebook-icon.svg" alt="facebook"></a></li>
+                <li><a href=""><img src="pics/icons/instagram-icon.svg" alt="instagram"></a></li>
+                <li><a href=""><img src="pics/icons/linkedin-icon.svg" alt="linkedin"></a></li>
+                <li><a href=""><img src="pics/icons/youtube-icon.svg" alt="youtube"></a></li>
+                <li><a href=""><img src="pics/icons/tiktok-icon.svg" alt="tiktok"></a></li>
+                <li><a href=""><img src="pics/icons/x-icon.svg" alt="x"></a></li>
+                <li><a href=""><img src="pics/icons/twitch-icon.svg" alt="twitch"></a></li>
             </ul>
             <hr>
                 <div class="col" id="footer-foot">
