--- a/customize.html
+++ b/customize.html
@@ -5,37 +5,43 @@
         <link rel="stylesheet" href="app.css">
         <title>Document</title>
     </head>
-    <body>
-        <div class="customize-page">
+    <body id="customize">
         <header>
-    
+            <a class="x-icon" href="index.html" title="x"></a>
+            <div class="customize-p">
+            <a href="account.html">SAVE</a>
+            </div>
+            <div class="logo-title col">
+                <a class="img" href="index.html" aria-label="company logo"></a>
+                <h1>TRION</h1> 
+            </div>
         </header>
         <main>
-            <a class="x-icon" href="index.html" title="x"></a>
+            <div class="customization-exterior-car">
+                <img src="pics/cars/7_25-Lux-Black-Nemesis_side-2.png" width="1024px" height="automotive">
             </div>
-            <div class="customize-p">
-            <li><a href="account.html">SAVE</a></li>
-            </div>
-            <div class="customize-img">
-            <img src="pics/icons/trion-logo.png" width="155px" height="156px"></div>
-            <div class="customize-h2">
-            <h2>TRION</h2> 
-            </div>
-            <div class="product">
-            <img src="pics/cars/7_25-Lux-Black-Nemesis_side-2.png" width="1024px" height="automotive">
-            </div>
-            <div class="product-nav">
-                <label for="color-1"></label>
-                <label for="color-2"></label>
-                <label for="color-3"></label>
-                <label for="color-4"></label>
-                <label for="color-5"></label>
-                <label for="color-6"></label>
-                <label for="color-7"></label>
-                <label for="color-8"></label>
-                <label for="color-9"></label>
-                <label for="color-10"></label>
-            </div>
+            <form class="product-nav">
+                <label for="exterior-color-1"></label>
+                <input type="radio" name=exterior-color id="exterior-color-1" value="exterior-color-1">
+                <label for="exterior-color-2"></label>
+                <input type="radio" name=exterior-color id="exterior-color-2" value="exterior-color-2">
+                <label for="exterior-color-3"></label>
+                <input type="radio" name=exterior-color id="exterior-color-3">
+                <label for="exterior-color-4"></label>
+                <input type="radio" name=exterior-color id="exterior-color-4">
+                <label for="exterior-color-5"></label>
+                <input type="radio" name=exterior-color id="exterior-color-5">
+                <label for="exterior-color-6"></label>
+                <input type="radio" name=exterior-color id="exterior-color-6">
+                <label for="exterior-color-7"></label>
+                <input type="radio" name=exterior-color id="exterior-color-7">
+                <label for="exterior-color-8"></label>
+                <input type="radio" name=exterior-color id="exterior-color-8">
+                <label for="exterior-color-9"></label>
+                <input type="radio" name=exterior-color id="exterior-color-9">
+                <label for="exterior-color-10"></label>
+                <input type="radio" name=exterior-color id="exterior-color-10">
+            </form>
         </main>
         <footer>
         </footer>
