--- a/shop.html
+++ b/shop.html
@@ -3,7 +3,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="app.css">
-        <title>Shop | TRION</title>
+        <title>Press | TRION</title>
         <link rel="icon" type="image/x-icon" href="pics/icons/trion-logo.png">
     </head>
     <body>
@@ -52,7 +52,100 @@
             </nav>
         </header>
         <main>
-
+            <div class="card-grid-2">
+                <div class="first-4">
+                <div class="card-container-2">
+                    <div class="card-2">
+                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                    </div>
+                </div>
+                <div class="card-container-2">
+                    <div class="card-2">
+                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                    </div>
+                </div>
+                <div class="card-container-2">
+                    <div class="card-2">
+                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                    </div>
+                </div>
+                </div>
+                <div class="first-4">
+                <div class="card-container-2">
+                    <div class="card-2">
+                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                    </div>
+                </div>
+                <div class="card-container-2">
+                    <div class="card-2">
+                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                    </div>
+                </div>
+                <div class="card-container-2">
+                    <div class="card-2">
+                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                    </div>
+                </div>
+                </div>
+                <div class="first-4">
+                <div class="card-container-2">
+                    <div class="card-2">
+                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                    </div>
+                </div>
+                <div class="card-container-2">
+                    <div class="card-2">
+                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                    </div>
+                </div>
+                <div class="card-container-2">
+                    <div class="card-2">
+                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                    </div>
+                    </div>
+                </div>
+                <div class="first-4">
+                <div class="card-container-2">
+                    <div class="card-2">
+                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                    </div>
+                </div>
+                <div class="card-container-2">
+                    <div class="card-2">
+                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                    </div>
+                </div>
+                <div class="card-container-2">
+                    <div class="card-2">
+                        <img src="pics/icons/no-photo.jpg" alt="photo" width="406px" height="406px">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                    </div>
+                    </div>
+                </div>
+            </div>    
         </main>
         <footer>
             <div>
@@ -61,17 +154,17 @@
             <div id="footer-main" class="row wrap">
                 <nav class="footer-nav">
                     <ul class="col">
-                        <li><a href="#">ACCOUNT</a></li>
+                        <li><a href="account.html">ACCOUNT</a></li>
                         <li><a href="#">MODELS</a></li>
-                        <li><a href="#">CUSTOMIZATION</a></li>
+                        <li><a href="customize.html">CUSTOMIZATION</a></li>
                         <li><a href="#">ABOUT US</a></li>
-                        <li><a href="#">PRESS</a></li>
-                        <li><a href="#">CONTACT US</a></li>
-                        <li><a href="#">STORE</a></li>
+                        <li><a href="press.html">PRESS</a></li>
+                        <li><a href="contact-us.html">CONTACT US</a></li>
+                        <li><a href="shop.html">STORE</a></li>
                     </ul>
                 </nav>
                 <section id="footer-contact">
-                    <h2>CONTACT US</h2>
+                    <h3>CONTACT US</h3>
                     <form class="row wrap">
                         <div>
                             <label for="f-name">FIRST NAME</label>
