Added color functionality

--- a/customize.html
+++ b/customize.html
@@ -6,11 +6,9 @@
         <title>Document</title>
     </head>
     <body id="customize">
-        <header>
+        <header class="row">
             <a class="x-icon" href="index.html" title="x"></a>
-            <div class="customize-p">
-            <a href="account.html">SAVE</a>
-            </div>
+            <a href="account.html" class="save">SAVE</a>
             <div class="logo-title col">
                 <a class="img" href="index.html" aria-label="company logo"></a>
                 <h1>TRION</h1> 
@@ -18,33 +16,34 @@
         </header>
         <main>
             <div class="customization-exterior-car">
-                <img src="pics/cars/7_25-Lux-Black-Nemesis_side-2.png" width="1024px" height="automotive">
+                <img src="pics/cars/7_25-Lux-Black-Nemesis_side-crop.png">
             </div>
-            <form class="product-nav">
+            <form class="color-select">
                 <label for="exterior-color-1"></label>
-                <input type="radio" name=exterior-color id="exterior-color-1" value="exterior-color-1">
+                <input type="radio" name=exterior-color id="exterior-color-1" value="custom-color-1">
                 <label for="exterior-color-2"></label>
-                <input type="radio" name=exterior-color id="exterior-color-2" value="exterior-color-2">
+                <input type="radio" name=exterior-color id="exterior-color-2" value="custom-color-2">
                 <label for="exterior-color-3"></label>
-                <input type="radio" name=exterior-color id="exterior-color-3">
+                <input type="radio" name=exterior-color id="exterior-color-3" value="custom-color-3">
                 <label for="exterior-color-4"></label>
-                <input type="radio" name=exterior-color id="exterior-color-4">
+                <input type="radio" name=exterior-color id="exterior-color-4" value="custom-color-4">
                 <label for="exterior-color-5"></label>
-                <input type="radio" name=exterior-color id="exterior-color-5">
+                <input type="radio" name=exterior-color id="exterior-color-5" value="custom-color-5">
                 <label for="exterior-color-6"></label>
-                <input type="radio" name=exterior-color id="exterior-color-6">
+                <input type="radio" name=exterior-color id="exterior-color-6" value="custom-color-6">
                 <label for="exterior-color-7"></label>
-                <input type="radio" name=exterior-color id="exterior-color-7">
+                <input type="radio" name=exterior-color id="exterior-color-7" value="custom-color-7">
                 <label for="exterior-color-8"></label>
-                <input type="radio" name=exterior-color id="exterior-color-8">
+                <input type="radio" name=exterior-color id="exterior-color-8" value="custom-color-8">
                 <label for="exterior-color-9"></label>
-                <input type="radio" name=exterior-color id="exterior-color-9">
+                <input type="radio" name=exterior-color id="exterior-color-9" value="custom-color-9">
                 <label for="exterior-color-10"></label>
-                <input type="radio" name=exterior-color id="exterior-color-10">
+                <input type="radio" name=exterior-color id="exterior-color-10" value="custom-color-10">
             </form>
         </main>
         <footer>
         </footer>
     </div>
+    <script src="script.js"></script>
     </body>
 </html>
