--- a/nemesis.html
+++ b/nemesis.html
@@ -51,21 +51,7 @@
                 </div>
             </nav>
         </header>
-        <section role="hero" class="row carousel-container">
-            <div class="hero parallax carousel_2">
-                <article class="col justify-end align-center">
-                    <h2 class="shaded">NEMESIS</h2>
-                    <p>LUXURY. SPEED. SUSTAINABILITY.</p>
-                    <a href="#" class="button">MORE DETAILS</a>
-                </article>
-            </div>
-            <div class="hero parallax carousel_2">
-                <article class="col justify-end align-center">
-                    <h2 class="shaded">BLACK WIDOW</h2>
-                    <p>LUXURY. SPEED. SUSTAINABILITY.</p>
-                    <a href="#" class="button">MORE DETAILS</a>
-                </article>
-            </div>
+        <section role="hero" class="nemesis-hero">
         </section>
         <main>
             <section class="full img col  shadow-top-bottom">
